<resources>
    <string name="app_name">Pixel Sales</string>

    <string name="action_settings">Settings</string>

    <string name="chooselan">Choose language here</string>
    <string name="chotheme">Choose theme here</string>
    <string name="analytics">Analytics</string>
    <string name="salary">Salary</string>
    <string name="generate">Generate</string>
    <string name="about">About</string>
    <string name="loan">Loan</string>
    <string name="fixed">Material</string>
    <string name="report">Report</string>
    <string name="today">Today</string>
    <string name="enterloan">Enter loan details below</string>
    <string name="nameofcampony">Name of the Company</string>
    <string name="loanam">loan amount</string>
    <string name="interestrate">interest rate</string>
    <string name="monthpayment">monthly payment</string>
    <string name="cancel">Cancel</string>
    <string name="add">Add</string>
    <string name="adddescr">Add desciption</string>
    <string name="enterdesbelow">Enter description below</string>
    <string name="entersalary">enter salary of employees here</string>
    <string name="nameofemplo">enter name of employee</string>
    <string name="male">male</string>
    <string name="female">female</string>
    <string name="monthsalary">monthly salary</string>
    <string name="dessalary">description of salary</string>
    <string name="enterfixed">Enter fixed material below</string>
    <string name="nameofmaterial">name of the fixed material</string>
    <string name="price">price</string>
    <string name="serviceyear">service year</string>
    <string name="desmater">description of material</string>
    <string name="product">product</string>
    <string name="service">service</string>
    <string name="nameofitem">item name</string>
    <string name="numberitem">number of item</string>
    <string name="priceperitem">product cost</string>
    <string name="priceperitemsold">selling price</string>
    <string name="desproduct">description of product</string>
    <string name="nameservice">Service name</string>
    <string name="serviceexpense">Service expense</string>
    <string name="incomeservice">Labor income</string>
    <string name="addserpro">add service or product</string>
    <string name="desservice">description of service</string>
    <string name="daily">daily</string>
    <string name="weekly">weekly</string>
    <string name="monthly">monthly</string>
    <string name="hourwork">hours of work</string>
    <string name="purchasecost">purchase cost</string>
    <string name="Depreciation">Depreciation Year</string>
    <string-array name="hntsa_array">
        <item>Hand pump(HP)</item>
        <item>Generator(GE)</item>
        <item>Biogas(BIO)</item>
        <item>Installation(L)</item>
        <item>Other</item>
    </string-array>
    <string-array name="customer_segment">
        <item>HW</item>
        <item>SW</item>
        <item>WC</item>
        <item>FA</item>
        <item>Other</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="expense">Expense</string>
    <string name="sync">Sync</string>
</resources>
