<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_camera"
            android:icon="@drawable/addgen_24dp"
            android:title="@string/add" />
        <item
            android:id="@+id/nav_generate"
            android:icon="@drawable/folder"
            android:title="@string/generate" />
        <item
            android:id="@+id/nav_setting"
            android:icon="@drawable/sett"
            android:title="@string/action_settings" />
       <!-- <item
            android:id="@+id/nav_help"
            android:icon="@drawable/help"
            android:title="help" />
        <item
            android:id="@+id/nav_compony"
            android:icon="@drawable/company"
            android:title="about company" />-->


    </group>



</menu>
