<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="500dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    app:behavior_hideable="false"
    app:behavior_peekHeight="0dp"
    app:layout_behavior="android.support.design.widget.BottomSheetBehavior"
    android:padding="20dp"
    android:id="@+id/bottom_sheet"
    android:background="#D81B60">

    <TextView

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:text="@string/entersalary"
        android:textColor="#fff"
        android:textSize="18sp" />

    <LinearLayout
        android:id="@+id/line"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:orientation="horizontal">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent" />

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent">

                <EditText
                    android:id="@+id/wesidato"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_centerInParent="true"
                    android:background="@drawable/edback"
                    android:hint="@string/nameofemplo"
                    android:inputType="text"
                    android:padding="10dp"
                    android:singleLine="true"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body2" />
            </RelativeLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

            </LinearLayout>
        </LinearLayout>

        <RadioGroup
            android:id="@+id/myRadioGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/text"
            android:layout_gravity="center"
            android:layout_marginBottom="5dp"
            android:background="@drawable/edback"
            android:checkedButton="@+id/sound"
            android:orientation="horizontal"
            android:padding="2dp">

            <RadioButton
                android:checked="true"
                android:id="@+id/male"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/male" />

            <RadioButton
                android:id="@+id/female"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/female" />

        </RadioGroup>
        <LinearLayout
            android:weightSum="2"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <EditText
                android:id="@+id/salary"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="35dp"
                android:layout_centerInParent="true"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/edback"
                android:hint="@string/monthsalary"
                android:inputType="number"
                android:padding="5dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2" />
            <EditText
                android:id="@+id/job"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="35dp"
                android:layout_centerInParent="true"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/edback"
                android:hint="Type of job"
                android:inputType="text"
                android:padding="5dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2" />
        </LinearLayout>

        <EditText
            android:layout_margin="10dp"
            android:id="@+id/tax"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_centerInParent="true"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/edback"
            android:hint="Tax"
            android:inputType="number"
            android:padding="5dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:gravity="center"
            android:text="@string/adddescr"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:orientation="horizontal">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent">

                <EditText
                    android:id="@+id/description"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_centerInParent="true"
                    android:background="@drawable/edback"
                    android:hint="@string/dessalary"
                    android:inputType="text"
                    android:padding="10dp"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body2" />
            </RelativeLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_marginTop="10dp"
        android:weightSum="2"
        android:layout_width="match_parent"
        android:layout_height="20dp">

        <TextView
            android:id="@+id/taxpaid"
            android:textColor="#fff"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:text="Tax Paid =  0 br"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

        <TextView
            android:id="@+id/totalpayment"
            android:textColor="#fff"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:text="Total Payment =  0 br"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2" />
    </LinearLayout>

    <LinearLayout
        android:visibility="visible"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:weightSum="2">
        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1">

            <Button
                android:id="@+id/cancel"
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="0dp"
                android:background="@drawable/buttonback"
                android:drawableLeft="@drawable/salary"
                android:drawablePadding="5dp"
                android:text="@string/cancel"
                android:textColor="@android:color/white"
                android:textSize="15dp" />
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            >

            <Button
                android:id="@+id/add"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:layout_centerInParent="true"
                android:background="@drawable/buttonback"
                android:drawableLeft="@drawable/analytics"
                android:text="@string/add"
                android:textColor="@android:color/white"
                android:textSize="15dp" />
        </RelativeLayout>
    </LinearLayout>

</LinearLayout>